MedicationRequest and MedicationDispense now have dose and rate data (#447)